--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ var theDistance = "";
 
 function startTimer (workoutLength)
 {
-  osc.start(0);
+  //osc.start(0);
   maxCycles = 3*workoutLength;
   document.getElementById("startButton").style.display = "none";
 
